--- a/contact.html
+++ b/contact.html
@@ -25,105 +25,104 @@
     <ul id="menu-barra-temp" style="list-style:none;">
       <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED">
         <a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
-      <li>
-        <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
-    </ul>
-  </div>
-  <!-- ./Gov -->
-
-  <!-- Navigation -->
-
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">
-    <div class="container">
-      <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
-
-      <!-- Logo -->
-        <a href="index.html" title="Home"><img src="docs/logos/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa2"></a>
-
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Sobre
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
-                <a class="dropdown-item" href="about.html">TerraMA2</a>
-                <a class="dropdown-item" href="team.html">Equipe</a>
-                <a class="dropdown-item" href="architecture.html">Arquitetura</a>
-                <a class="dropdown-item" href="contact.html">Contato</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Projetos
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
-                <a class="dropdown-item" href="projects.html">Projetos</a>
-                <a class="dropdown-item" href="portfolio-1-col.html">Estudos de Casos</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="download.html">Download</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="documentation.html">Documentação</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
-            </li>
-          </ul>
-        </div>
+        <li>
+          <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
+        </ul>
       </div>
-    </nav>
-    <!-- ./Navigation -->
+      <!-- /.Gov -->
 
-    <!-- Container -->
-    <div class="container">
+      <!-- Navigation -->
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">
+        <div class="container">
+          <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a> -->
 
-      <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Contato</h1>
+          <!-- Logo -->
+          <a href="index.html" title="Home"><img src="docs/logos/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa2"></a>
 
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="breadcrumb-item active">Contato</li>
-      </ol>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-      <!-- Content Row -->
-      <div class="row">
-        <!-- Map Column -->
-        <div class="col-lg-12">
-          <h4>Localização</h4><br>
-          <!-- Embedded Google Map -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3666.992668957822!2d-45.8633627850288!3d-23.206937784860017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc4b06accadc73%3A0xddb542b96e931e54!2sINPE+-+Instituto+Nacional+de+Pesquisas+Espaciais!5e0!3m2!1spt-BR!2sbr!4v1505241421568" width="1100" height="300" style="border:0" allowfullscreen></iframe>
-
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownAbout" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Sobre
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                  <a class="dropdown-item" href="about.html">TerraMA2</a>
+                  <a class="dropdown-item" href="team.html">Equipe</a>
+                  <a class="dropdown-item" href="architecture.html">Arquitetura</a>
+                  <a class="dropdown-item" href="contact.html">Contato</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Projetos
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownAbout">
+                  <a class="dropdown-item" href="projects.html">Projetos</a>
+                  <a class="dropdown-item" href="portfolio-1-col.html">Estudos de Casos</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="download.html">Download</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="documentation.html">Documentação</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" title="Em Breve!">Cursos</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <!-- Contact Details Column -->
-        <div class="col-lg-12"><br><br>
-          <!--<h3>Contact Details</h3>-->
-          <h4>Utilize uma das opções para contato com a equipe do INPE e com outros usuários:</h4><br>
+      </nav>
+      <!-- /.Navigation -->
 
-          <h4>Lista de Discussão</h4><br>
+      <!-- Container -->
+      <div class="container">
 
-          <p>Utilize nossa lista de discussão:<br>  
-            Para se inscrever na lista veja <a href="http://listas.dpi.inpe.br/mailman/listinfo/terrama2-l" target="_blank">AQUI!</a><br>
-            Para enviar e-mail aos participantes da lista use: <a href="mailto:terrama2-l@dpi.inpe.br">terrama2-l@dpi.inpe.br</a></p>
+        <!-- Page Heading/Breadcrumbs -->
+        <h1 class="mt-4 mb-3">Contato</h1>
 
-            <h4>Endereço de E-mail</h4><br>
-            <p>Para contato utilize o endereço:<br>
-              E-mail: <a href="mailto:terrama2@dpi.inpe.br">terrama2@dpi.inpe.br</a></p>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="breadcrumb-item active">Contato</li>
+        </ol>
 
+        <!-- Content Row -->
+        <div class="row">
+          <!-- Map Column -->
+          <div class="col-lg-12">
+            <h4>Localização</h4><br>
+            <!-- Embedded Google Map -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3666.992668957822!2d-45.8633627850288!3d-23.206937784860017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cc4b06accadc73%3A0xddb542b96e931e54!2sINPE+-+Instituto+Nacional+de+Pesquisas+Espaciais!5e0!3m2!1spt-BR!2sbr!4v1505241421568" width="1100" height="300" style="border:0" allowfullscreen></iframe>
+
+          </div>
+          <!-- Contact Details Column -->
+          <div class="col-lg-12"><br><br>
+            <!--<h3>Contact Details</h3>-->
+            <h4>Utilize uma das opções para contato com a equipe do INPE e com outros usuários:</h4><br>
+
+            <h4>Lista de Discussão</h4><br>
+
+            <p>Utilize nossa lista de discussão:<br>  
+              Para se inscrever na lista veja <a href="http://listas.dpi.inpe.br/mailman/listinfo/terrama2-l" target="_blank">AQUI!</a><br>
+              Para enviar e-mail aos participantes da lista use: <a href="mailto:terrama2-l@dpi.inpe.br">terrama2-l@dpi.inpe.br</a></p>
+
+              <h4>Endereço de E-mail</h4><br>
+              <p>Para contato utilize o endereço:<br>
+                E-mail: <a href="mailto:terrama2@dpi.inpe.br">terrama2@dpi.inpe.br</a></p>
+
+              </div>
             </div>
-        </div>
-          <!-- /.row -->
+            <!-- /.row -->
 
-      <!-- Contact Form -->
-      <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
+            <!-- Contact Form -->
+            <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
      <!--  <div class="row">
         <div class="col-lg-12">
           
@@ -172,77 +171,77 @@
       </div>
     </footer> -->
     <footer class="mainfooter">
-  <div class="footer-top p-y-2">
-    <div class="container-fluid">
+      <div class="footer-top p-y-2">
+        <div class="container-fluid">
 
-    </div>
-  </div>
-  <div class="footer-middle">
-  <div class="container">
-    <div class="row">
-     
-      <div class="col-6 col-md-4">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4>Sobre</h4>
-          <ul class="list-unstyled">
-            <li><a href="#"></a></li>
-            <li><a href="about.html">TerraMA²</a></li>
-            <li><a href="team.html">Equipe</a></li>
-            <li><a href="architecture.html">Arquitetura</a></li>
-            <li><a href="contact.html">Contato</a></li>
-          </ul>
         </div>
       </div>
-      <div class="col-6 col-md-4">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4>Projetos</h4>
-          <ul class="list-unstyled">
-            <li><a href="#"></a></li>
-            <li><a href="projects.html">Projetos</a></li>
-            <li><a href="#" title="Em Breve!">Estudos de Caso</a></li>
-          </ul>
-        </div>
+      <div class="footer-middle">
+        <div class="container">
+          <div class="row">
 
-        <div class="footer-pad">
-          <ul class="list-unstyled">
-            <li><a href="#"></a></li>
-            <li><a href="download.html">Download</a></li>
-            <li><a href="documentation.html">Documentação</a></li>
-            <li><a href="#" title="Em Breve!">Cursos</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-6 col-md-4">
-        <!--Column1-->
-        <div class="footer-pad">
-          <h4>Endereço</h4>
+            <div class="col-6 col-md-4">
+              <!--Column1-->
+              <div class="footer-pad">
+                <h4>Sobre</h4>
+                <ul class="list-unstyled">
+                  <li><a href="#"></a></li>
+                  <li><a href="about.html">TerraMA²</a></li>
+                  <li><a href="team.html">Equipe</a></li>
+                  <li><a href="architecture.html">Arquitetura</a></li>
+                  <li><a href="contact.html">Contato</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4">
+              <!--Column1-->
+              <div class="footer-pad">
+                <h4>Projetos</h4>
+                <ul class="list-unstyled">
+                  <li><a href="#"></a></li>
+                  <li><a href="projects.html">Projetos</a></li>
+                  <li><a href="#" title="Em Breve!">Estudos de Caso</a></li>
+                </ul>
+              </div>
 
-            <p>Avenida dos Astronautas, 1.758 <br> 
-            Jd. Granja CEP 12227 010<br>
-            São José dos Campos - SP</p> 
+              <div class="footer-pad">
+                <ul class="list-unstyled">
+                  <li><a href="#"></a></li>
+                  <li><a href="download.html">Download</a></li>
+                  <li><a href="documentation.html">Documentação</a></li>
+                  <li><a href="#" title="Em Breve!">Cursos</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-6 col-md-4">
+              <!--Column1-->
+              <div class="footer-pad">
+                <h4>Endereço</h4>
+
+                <p>Avenida dos Astronautas, 1.758 <br> 
+                  Jd. Granja CEP 12227 010<br>
+                São José dos Campos - SP</p> 
+              </div>
+            </div>
+          </div> 
         </div>
       </div>
-    </div> 
-  </div>
-  </div>
-  <div class="footer-bottom">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <!--Footer Bottom-->
-          <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <!--Footer Bottom-->
+              <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</footer>
-  <!-- /.Footer -->
+    </footer>
+    <!-- /.Footer -->
 
     <!-- Gov -->
     <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-    <!-- ./Gov -->
+    <!-- /.Gov -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -251,8 +250,7 @@
 
     <!-- Contact form JavaScript -->
     <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script> 
-
-  </body>
-</html>
+    <!-- <script src="js/jqBootstrapValidation.js"></script>
+      <script src="js/contact_me.js"></script>  -->
+    </body>
+    </html>
