--- a/team.html
+++ b/team.html
@@ -34,7 +34,7 @@
 
     <!-- Navigation -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">  
-        <div class="container">
+        <div class="container-fluid">
 
           <!-- Logo -->
           <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logo terraMa2"></a>
