--- a/courses.html
+++ b/courses.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/> 
+  <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/>
 
-  <title>TerraMA²</title>
+  <title>TerraMA² · Cursos</title>
   <link href="img/terrama2_logo_100dpi.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
   <!-- Bootstrap core CSS -->
@@ -21,7 +21,6 @@
 </head>
 
 <body>
-
   <!-- Gov -->
   <div id="barra-brasil" style="background:#7F7F7F; height: 30px; padding:0 0 0 10px;"> 
     <ul id="menu-barra-temp" style="list-style:none;">
@@ -31,14 +30,14 @@
           <a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
         </ul>
       </div>
-      <!-- /.Gov -->    
+      <!-- /.Gov -->
 
       <!-- Navigation -->
       <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-light">  
         <div class="container">
 
           <!-- Logo -->
-          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do TerraMa2"></a>
+          <a href="index.html" title="Home" data-toggle="tooltip" data-placement="right"><img src="img/terrama2_logo_100dpi.png" width="60" height="50" alt="logotipo do terraMa2"></a>
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -91,7 +90,7 @@
       <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">Notícias
+        <h1 class="mt-4 mb-3">Cursos
           <small>TerraMA²</small>
         </h1>
 
@@ -99,93 +98,34 @@
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item active">Notícias</li>
+          <li class="breadcrumb-item active">Cursos</li>
         </ol>
 
-        <h4>TerraMA² versão 4.0 - ALPHA 1 <span class="badge badge-primary">New</span></h4>
-        <p>disponível (25/08/2017)</p>
+        <h4>Cursos de Treinamento</h4><br>
 
-        <p>A plataforma TerraMA² necessita de inovações que atenda as aplicações diversas. Nesse sentido, estamos passando por uma reestruturação grande na base de nosso produto. Isto só tem sido possível devido ao projeto “BRAZIL CERRADO CLIMATE CHANGE MITIGATION PLATFORM OF MONITORING AND WARNING OF FOREST FIRES IN THE BRAZILIAN CERRADO PROJECT”, financiado pelo Banco Mundial (Banco Defra) obtido junto ao Ministério do Meio Ambiente, que tem como um dos objetivos modernizar o projeto de Queimadas do INPE, fazendo uso da plataforma TerraMA².</p>
+        <div class="jumbotron">
 
-        <p>Tais inovações que irão atender plenamente o projeto de Queimadas como várias outras aplicações. As principais inovações serão:</p>
+          <h5>Curso TerraMA2Q</h5>
 
-        <ul>
-          <li><p><b>Coleta de dados ambientais:</b> além de fazer busca de dados em outras instituições por meio de <a href="" title="File Transfer Protocol">FTP</a> (protocolo de transferência de dados) ou serviços web (WCS ou WFS), a aplicação poderá se servir de base de dados que estejam localmente sendo “alimentadas” por outras tecnologias, como exemplo: uma antena que captura imagens de satélite meteorológico e armazena os arquivos em um disco local na rede do usuário.</p></li>
+          <p><b>Data:</b> 9 a 11 de outubro de 2017</p>
+          <p><b>Local:</b> INPE - SJC</p>
+          <p><b>Instrutores:</b> Eymar Lopes, Fabiano Morelli e Gilberto Queiroz</p>
+          <p>Dado UF <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=download:ibge.zip">ibge.zip</a></p> 
 
-          <li><p><b>Estratégia de armazenamento:</b> dados matriciais (grades) são por natureza grandes consumidores de espaço físico de armazenamento e de complexo manuseio quando envolve séries históricas nas análises sobre grande volume de dados. Na versão nova da plataforma, além da estratégia de e armazenar dados no SGBD local do usuário, os dados matriciais poderão ser armazenados em sistemas de arquivos e processados dessa forma sem necessidade de importação para um banco relacional. Outras formas de armazenamento em bancos não relacionais também estão em estudo por parte da equipe de desenvolvimento da TerraMA².</p></li>
+          <h5>Slides do Curso</h5>
+          <ul>
+            <li>Instalação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:01_instalacao_terrama2.pdf" target="_blank">01_instalacao_terrama2.pdf</a></li>
+            <li>Apresentação da plataforma TerraMA2 <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:02_introducao_terrama2.pdf" target="_blank">02_introducao_terrama2.pdf</a></li>
+            <li>Analise <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:06_analise_terrama2.pdf" target="_blank">06_analise_terrama2.pdf</a></li>
+            <li>Operadores <a href="http://www.dpi.inpe.br/terrama2/lib/exe/fetch.php?media=docs:operadores_terrama2.pdf" target="_blank">operadores_terrama2.pdf</a></li>
+          </ul> 
 
-          <li><p><b>Novos operadores espaço-temporais:</b> uma lista de novo operadores espaciais e temporais estão previstos de serem implementados sobre os diversos tipos de dados ambientais. Atualmente a unidade de tempo empregada nos operadores está restrita a valores em “horas”. Será permitido o usuário declarar que unidade mais conveniente ao tipo de dado disponível, no caso, valores em minutos, horas, dias, semanas, meses ou anos.</p></li>
-
-          <li><p><b>Linguagem de programação para modelos de análise:</b> a versão atual permite que o usuário escreva os modelos de análise na linguagem <a href="http://www.lua.org/" target="_blank">LUA (www.lua.org)</a> e na nova versão será incorporada a linguagem <a href="https://www.python.org/" target="_blank">PYTHON (https://www.python.org/)</a>.</p></li>
-
-          <li><p><b>Geometria do objeto monitorado:</b> a geometria do objeto monitorado, restrito a polígonos, será estendida a pontos e linhas. No caso de uma linha de transmissão de energia, por exemplo, análises poderão ser realizadas diretamente sobre o vetor da linha, sem necessidade de criar um “buffer” entorno da linha.</p></li>
-
-          <li><p><b>Novo aplicativo WEB:</b> uma nova versão do aplicativo WEB utilizando novas ferramentas como OpenLayer 3.0 e bibliotecas em Javascript (JQuery, Bootstrap, Chart.js).</p></li>
-        </ul>
-
-      </div>
-      <!-- /.Container -->
-
-      <!-- Container -->
-      <div class="container">
-
-        <!-- Carousel -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-          </ol>
-
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="images/selection_001.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/selection_002.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/selection_003.png" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/selection_004.png" alt="Four slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="images/selection_005.png" alt="Five slide">
-            </div>
-          </div>
-
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
-        <!-- /.Carousel -->
       </div>
-      <!-- /.Container -->
-
-      <!-- Container -->
-      <div class="container"><br><br> 
-
-        <!-- Jumbotron -->
-        <div class="jumbotron border border-warning">
-
-          <p>A Figura a seguir mostra como deverá operar a nova versão da plataforma TerraMA², com destaque para as diferentes fontes de dados ambientais, onde a plataforma poderá coletar dados remotamente em outras fontes (instituições) ou se servir de dados localmente disponíveis que foram coletados por outras tecnologias como satélites de comunicação, celular, rádio entre outras.</p>
-
-          <img class="img-fluid rounded mb-3 mb-md-0 displayed" src="images/modelo_terrama2_v4.jpg" alt="Fluxograma do TerraMa2">
-        </div>
-        <!-- /.Jumbotron -->
-      </div><br><br>
       <!-- /.Container -->
 
       <!-- Footer -->
+
       <footer class="mainfooter">
         <div class="footer-top p-y-2">
           <div class="container-fluid">
@@ -278,5 +218,3 @@
 
     </body>
     </html>
-
-  
