--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
                 <a class="nav-link" href="documentation.html">Documentação</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="tooltip" data-placement="bottom" title="Em Breve!">Cursos</a>
+                <a class="nav-link" href="courses.html">Cursos</a>
               </li>
               <li>
                 <a href="#" class="nav-link" data-toggle="tooltip" data-placement="bottom" title="Em Breve!"><img src="img/flagenglish.png" alt="bandeira da Inglaterra"></a>
