--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                   <a class="dropdown-item" href="contact.html">Contato</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                  <a class="nav-link" href="projects.html">Projetos</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Projetos
                 </a>
@@ -64,7 +67,7 @@
                   <a class="dropdown-item" href="projects.html">Projetos</a>
                   <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
                 </div>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="download.html">Download</a>
               </li>
@@ -94,12 +97,13 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           </ol>
 
           <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item active">
-              <img class="d-block w-100" src="images/wildfire.png" alt="Imagem de Queimadas">
+              <img class="d-block w-100" src="images/chuvas-nova-friburgo-rio-janeiro-20110112-original1.jpeg" alt="Chuvas" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Queimadas</h1> -->
                 <!-- <p>This is a description for the first slide.</p> -->
@@ -107,7 +111,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/storm.png" alt="Imagem de Raios">
+              <img class="d-block w-100" src="images/enchente.jpg" alt="Enchentes" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Raios</h1> -->
                 <!--  <p>This is a description for the second slide.</p> -->
@@ -115,7 +119,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/inundation.png" alt="Imagem de Inundações">
+              <img class="d-block w-100" src="images/Estiagem_seca.jpg" alt="Imagem de Inundações" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                 <!-- <h1>Inundações</h1> -->
                 <!-- <p>This is a description for the third slide.</p> -->
@@ -123,7 +127,15 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="images/terrama2_v4.png" alt="Estrutura do projeto TerraMa2">
+              <img class="d-block w-100" src="images/poluicao_ar.jpg" alt="Poluição" style="width:100%;">
+              <div class="carousel-caption d-none d-md-block">
+               <!--  <h1>Third Slide</h1> -->
+               <!-- <p>This is a description for the third slide.</p>--> 
+             </div>
+           </div>
+
+           <div class="carousel-item">
+              <img class="d-block w-100" src="images/Toxic_Foam_lead.jpg" alt="Espuma tóxica" style="width:100%;">
               <div class="carousel-caption d-none d-md-block">
                <!--  <h1>Third Slide</h1> -->
                <!-- <p>This is a description for the third slide.</p>--> 
