--- a/new-two.html
+++ b/new-two.html
@@ -57,7 +57,10 @@
                   <a class="dropdown-item" href="contact.html">Contato</a>
                 </div>
               </li>
-              <li class="nav-item dropdown">
+              <li class="nav-item">
+                  <a class="nav-link" href="projects.html">Projetos</a>
+              </li>
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="about.html" id="navbarDropdownProjects" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Projetos
                 </a>
@@ -65,7 +68,7 @@
                   <a class="dropdown-item" href="projects.html">Projetos</a>
                   <a class="dropdown-item" href="#" data-toggle="tooltip" data-placement="right" title="Em Breve!">Estudos de Casos</a>
                 </div>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="download.html">Download</a>
               </li>
